@@ -16,6 +16,7 @@ Change Log:
 - Added: Option for manual invoice created to keep the expire date of the membership the same
 - Added: Addon to hide protected pages from visitor search
 - Added: Plugin deactivation hook to clear Membership Crons
+- Added: Stripe Plan webhooks
 - Fixed: Multiple Invoice creation
 - Fixed: Default gateway on invoice
 - Fixed: Invoice status not changing for free payments
